--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -5,19 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {{!--
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> --}}
+    <link rel="shortcut icon" href="/images/icons/main-favicon.svg" type="image/x-icon">
     <title>{{title}}</title>
+    {{#each styles}}
+    {{{style}}}
+    {{/each}}
 </head>
-{{#each styles}}
-{{style}}
-{{/each}}
 
 <body>
     {{{body}}}
 </body>
 {{#each scripts}}
-{{script}}
+{{{script}}}
 {{/each}}
 
 </html>
