--- a/src/public/sass/login/loginSignup.scss
+++ b/src/public/sass/login/loginSignup.scss
@@ -121,6 +121,9 @@ body {
       .pass-icon {
         width: 35px;
       }
+      .name-icon{
+        width: 29px;
+      }
       input {
         margin-left: 8px;
         border: none;
