--- a/src/views/app/tasks.hbs
+++ b/src/views/app/tasks.hbs
@@ -1,1 +1,10 @@
-<h1>hello world in tasks</h1>
+{{> appNav}}
+<div class="body-ctn">
+
+    <div class="tasks-ctn">
+        <div class="not-found" id="tumbleweed" class="ocult">
+            <h2>Todo vacio por ahora</h2>
+            <object data="/images/icons/tumbleweed.svg" type="image/svg+xml"></object>
+        </div>
+    </div>
+</div>
