--- a/src/views/app/tasks.hbs
+++ b/src/views/app/tasks.hbs
@@ -1,6 +1,6 @@
 {{> appNav}}
 <div class="body-ctn">
-
+    <img src="/images/icons/add-task.png" class="add-task">
     <div class="tasks-ctn">
         <div class="not-found" id="tumbleweed" class="ocult">
             <h2>Todo vacio por ahora</h2>
