--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,1 +1,16 @@
-<h1>hello world in index</h1>
+<div class="banner-ctn">
+    <div class="buttons">
+        <button class="login"><a href="/login">Ingresar</a></button>
+        <button class="signup"><a href="/signup">Registrarse</a></button>
+    </div>
+    <div class="banner">
+        <object data="/images/objects/main-banner.svg" type="image/svg+xml"></object>
+        <div class="info-ctn">
+            <h2>¡ADMINISTRA TU TIEMPO!</h2>
+            <p>Con TimeFars podrás administrar de mejor manera todo tu tiempo, convirtiendote en una
+                persona cada día más eficiente y productiva con todo lo que haces. Te invitamos a unirte
+                a nuestra plataforma totalmente gratis.
+            </p>
+        </div>
+    </div>
+</div>
