--- a/src/views/partials/appNav.hbs
+++ b/src/views/partials/appNav.hbs
@@ -16,17 +16,13 @@
             <p><span></span>Rutinas</p><img src="/images/icons/nav/arrow.png">
         </li>
         <ul class="routines-ctn">
-            <li class="routine"><span></span>Rutina diaria</li>
-            <li class="routine"><span></span>Rutina sabado</li>
-            <li><img src="/images/icons/nav/add.png">Agregar rutina</li>
+            <li class="add-routine"><img src="/images/icons/nav/add.png">Agregar rutina</li>
         </ul>
         <li class="drop-down" id="projects-drop-down">
             <p><span></span>Proyectos</p><img src="/images/icons/nav/arrow.png">
         </li>
         <ul class="projects-ctn">
-            <li class="project"><span></span>Proyecto Kimfars</li>
-            <li class="project"><span></span>Proyecto Colegio</li>
-            <li><img src="/images/icons/nav/add.png">Agregar proyecto</li>
+            <li class="add-project"><img src="/images/icons/nav/add.png">Agregar proyecto</li>
         </ul>
         <a href="/app/config">
             <p><span></span>Configuracion</p>
