--- a/src/public/sass/app/_tasks.scss
+++ b/src/public/sass/app/_tasks.scss
@@ -6,6 +6,16 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  .add-task {
+    width: 50px;
+    margin-top: 20px;
+    cursor: pointer;
+    transform: scale(1);
+    transition: transform 300ms ease;
+    &:active {
+      transform: scale(0.9);
+    }
+  }
   .tasks-ctn {
     margin-top: 20px;
     display: flex;
