--- a/src/views/404.hbs
+++ b/src/views/404.hbs
@@ -1,1 +1,17 @@
-<h1>404 page not found</h1>
+<a href="/" class="return"><button>Regresar al Inicio</button></a>
+<div class="main">
+    <object data="/images/objects/404.svg" type="image/svg+xml"></object>
+    <div class="info">
+        <h2>¡Ups!</h2>
+        <p>Parece que la página que estás buscando no se encuentra
+            en el servidor (error 404), intenta:
+        <ul>
+            <li>Verificar la URL proporcionada.</li>
+            <li>Probar tu equipo accediendo a otras URL válidas.</li>
+            <li>Verificar tu conexión.</li>
+            <li>Comprobar y chequear tu navegador</li>
+        </ul>
+        </p>
+        <object data="/images/icons/tumbleweed.svg" type="image/svg+xml"></object>
+    </div>
+</div>
