--- a/src/public/sass/login/loginSignup.scss
+++ b/src/public/sass/login/loginSignup.scss
@@ -121,7 +121,7 @@ body {
       .pass-icon {
         width: 35px;
       }
-      .name-icon{
+      .name-icon {
         width: 29px;
       }
       input {
@@ -145,6 +145,7 @@ body {
       }
     }
     .submit {
+      width: 100%;
       border: none;
       border-radius: 2px;
       outline: none;
