--- a/src/public/sass/partials/_continueButtons.scss
+++ b/src/public/sass/partials/_continueButtons.scss
@@ -1,13 +1,16 @@
 .continue-buttons-ctn {
+  width: 100%;
   margin: 14px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   a {
+    width: 100%;
     margin: 5px 0;
     text-decoration: none;
     button {
+      width: 100%;
       display: flex;
       flex-direction: row;
       align-items: center;
