--- a/src/views/app/unverifiedEmail.hbs
+++ b/src/views/app/unverifiedEmail.hbs
@@ -1,2 +1,2 @@
 <h1>Hola, tu correo no está verificado, revisa tu email {{email}} para verificarlo</h1>
-<button>Volver a enviar email</button>
+<a href="/resendEmail">Volver a enviar email</a>
